# FluidDynamic

./: CMakeLists.txt  Control.cpp  ControlForce.cpp  ControlForce.h  Density.cpp  Density.h  DensityDerivative.cpp  Derivative.cpp  Derivative.h  Environment.cpp  Fluid.cpp  Fluid2D.cpp  GLFWWindowInfo.cpp  Keyframe.cpp  Keyframe.h  Makefile  NavierStokes.cpp  NavierStokes.h  Optimization.cpp  Optimization.h  README.md  Shader.cpp  Shader.h  ShaderUtility.cpp  Solver.cpp  Solver.h  Utility.h  Velocity.cpp  Velocity.h  VelocityDerivative.cpp  fluid  fluid.cpp  main.cpp  optimize.cpp  test_compute_shader.cpp  test_lbfgs.cpp  velocity.vs
include/: Control.h  Density.h  DensityDerivative.h  Environment.h  Fluid.h  Fluid2D.h  Keyframe.h  NavierStokes.h  Quantity.h  Shader.h  ShaderUtility.h  Solver.h  Utility.h  Velocity.h  VelocityDerivative.h
include/vo/: GLFWWindowInfo.h
resources/animation/from_3_to_4/: animation.kfd
resources/shader/: AdvectEnvironmentFrag.shader  AdvectEnvironmentVert.shader  RectangleFrag.shader  RectangleVert.shader  VelocityToTextureFrag.shader  VelocityToTextureVert.shader  blur.cs  clear.cs  mesh.vs  test.shader  velocity.fs
resources/shader/compute/: AddDensity.shader  AddVelocity.shader  AdvectDensity.shader  AdvectUVelocity.shader  AdvectVVelocity.shader  BuildPressure.shader  ClearDensity.shader  ClearVelocity.shader  ConfineVorticityVelocity.shader  ConserveMass.shader  Jacobi.shader
resources/shader/compute/common/: GetDensity.shader  GetU.shader  GetV.shader  LinearInterpolate2D.shader  SetDensityBoundary.shader  SetUVelocityBoundary.shader  SetVVelocityBoundary.shader
resources/shader/compute/derivative/: AdvectDensity.shader  AdvectUVelocity.shader  AdvectVVelocity.shader
